# hot-rs

./: .gitignore  Cargo.toml  DESIGN.md  NOTES.md  README.md  SCRATCHPAD.md  urls_sample.txt
memkv/: .gitignore  Cargo.toml  DESIGN.md  INTERNALS.md  README.md  build.rs
memkv/benches/: art_ops.rs  baseline.rs  memory.rs
memkv/docs/: researcher-ideas-1.md  researcher-ideas-2.md  researcher-ideas-3.md
memkv/examples/: allocation_analysis.rs  analyze_overhead.rs  basic_usage.rs  benchmark_all.rs  benchmark_libart.rs  btreemap_comparison.rs  check_sizes.rs  compact_benchmark.rs  compare_all.rs  compare_final.rs  compound_benchmark.rs  debug_art.rs  debug_scale.rs  final_summary.rs  honest_comparison.rs  hot_benchmark.rs  hot_breakdown.rs  inline_benchmark.rs  isolated_memory.rs  large_scale.rs  large_scale_fair.rs  memory_breakdown.rs  memory_test.rs  minimal_test.rs  node_sizes.rs  overhead_analysis.rs  overhead_breakdown.rs  perf_test.rs  precise_overhead.rs  real_urls_test.rs  realistic_test.rs  scale_test.rs  size_breakdown.rs  target_10.rs  ultra_sizes.rs  url_benchmark.rs  url_benchmark_final.rs  url_dataset.rs  verify_large.rs
memkv/src/: compact10.rs  hot_compact.rs  hot_compound.rs  hot_final.rs  hot_inline.rs  lib.rs  libart_ffi.rs  lsm_hot.rs  simple.rs
memkv/src/arena/: mod.rs
memkv/src/art/: debug.rs  mod.rs  node.rs
memkv/src/art2/: mod.rs
memkv/src/art_arena/: mod.rs
memkv/src/art_compact/: mod.rs
memkv/src/art_compact2/: mod.rs
memkv/src/art_compact_ptr/: mod.rs
memkv/src/art_fast/: mod.rs
memkv/src/art_glory/: mod.rs
memkv/src/art_hot/: mod.rs
memkv/src/art_lean/: mod.rs
memkv/src/art_minimal/: mod.rs
memkv/src/art_optimized/: mod.rs
memkv/src/art_ultra/: mod.rs
memkv/src/encoding/: mod.rs
memkv/src/front_coded/: mod.rs
memkv/src/frozen/: mod.rs
memkv/src/glory/: mod.rs
memkv/src/hot/: mod.rs
memkv/src/hot2/: mod.rs
memkv/src/hot_proper/: mod.rs
memkv/src/hybrid/: mod.rs
memkv/src/minimal/: mod.rs
memkv/src/patricia/: mod.rs
memkv/src/ultra_compact/: mod.rs
src/: lib.rs  proptests.rs
