[package]
name = "memkv"
version = "0.1.0"
edition = "2021"
description = "Memory-efficient key-value store for string keys"
license = "MIT OR Apache-2.0"
keywords = ["database", "key-value", "memory-efficient", "trie", "index"]
categories = ["data-structures", "database-implementations"]

[dependencies]
fst = "0.4"
parking_lot = "0.12"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3"
tikv-jemallocator = "0.5"
tikv-jemalloc-ctl = "0.5"

[[bench]]
name = "art_ops"
harness = false

[[example]]
name = "basic_usage"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
