[package]
name = "memkv"
version = "0.1.0"
edition = "2021"
description = "Memory-efficient key-value store for string keys"
license = "MIT OR Apache-2.0"
keywords = ["database", "key-value", "memory-efficient", "trie"]
categories = ["data-structures", "database-implementations"]

[dependencies]
fst = "0.4"           # FST for FrozenLayer
parking_lot = "0.12"  # Fast RwLock for MemKV
smallvec = "1.11"     # Inline prefix storage

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
rand = "0.8"
tikv-jemallocator = "0.5"
tikv-jemalloc-ctl = "0.5"

[[example]]
name = "basic_usage"

[[example]]
name = "scale_test"

[profile.release]
lto = true
codegen-units = 1
